# glin-explorer

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-01a15e220025a46094e6e9fb796c793933e8d827c6d5de18965da51333679b41.json  query-0423dcfe0b29bbde57900c9a784b1a305ef356ea3a3404097314c12f866ba608.json  query-1f095405690d99360133b36ed62284bc58b87eb4e410f9a60c468d8045726e45.json  query-2e92926816053cda2de6d571867a625fab5bb9668840db94bd18c411f96dc39b.json  query-6121e3aac76a33f1161ec063ce42f42f5e8da18723ed860258d25d0ba79a66d3.json  query-94c213766b1c6a1b29a272e46a4a9e5e1a0cc6554c61fa95ff2bc6bb2dd76d63.json  query-99b3ed6c20682274111383f2e38e8d304f08fb8e1d4e6767dcd5b536ec09ebfc.json  query-a00a51b778c94f2dfc26b611ac42f87924af886458032902c9cd0e237dcee9d6.json  query-a51c480e5312ae1afadf897c2f0fcf9cf170771991c4eb5b1ddc4104f9aabc9b.json  query-a696104370bda4a973179160e21bdb6afefd70b55a4d0d54a792377b06c9c36d.json  query-b2cfe9191b4ab770fb176e2f0d184e918c621af33d3d2da0e8d651442a341751.json  query-c71f0acb115524d27631003cbf795ec17814fd6863d4966e3234d58923273030.json  query-ca00418bb286ee7259d39814b5ff82024bab2a7ec7cc713ac614707d7ac4e3cf.json  query-d79f50c96c0fb155100e89241ec66e15a71c90ca88729209ae93f2ac186cf2a8.json  query-f5d08780e384f943a1f01ce6a0017c6229b155d5af64097ba17508afc6c0137f.json  query-fff399fafcd5c50e85bdd342bea92c1b835c317eb7490df2e13d0d0bd003ba50.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 001_create_blocks.sql  002_create_extrinsics.sql  003_create_events.sql  004_create_contracts.sql  005_create_accounts.sql
backend/crates/db/src/: lib.rs  models.rs
backend/crates/indexer/: Cargo.toml
backend/crates/indexer/src/: main.rs
backend/crates/verifier/: Cargo.toml
backend/crates/verifier/src/: main.rs
frontend/: .env.example  package.json  pnpm-lock.yaml
frontend/src/app/blocks/: page.tsx
frontend/src/app/providers/: page.tsx
frontend/src/app/tx/[blockHash]/[index]/: page.tsx
frontend/src/components/blocks/: latest-blocks.tsx
frontend/src/components/contracts/: contract-interaction.tsx
frontend/src/components/providers/: explorer-provider.tsx
frontend/src/components/ui/: badge.tsx  theme-toggle.tsx
frontend/src/hooks/: useContractInfo.ts
frontend/src/lib/api/: explorer-client.ts  index.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/account/[address]/: page.tsx
src/app/block/[id]/: page.tsx
src/app/blocks/: page.tsx
src/app/deploy-contract/: page.tsx
src/app/leaderboard/: page.tsx
src/app/providers/: page.tsx
src/app/tasks/: page.tsx
src/app/tx/[blockHash]/[index]/: page.tsx
src/app/validators/: page.tsx
src/components/blocks/: latest-blocks.tsx
src/components/cards/: stats-card.tsx
src/components/contracts/: contract-info-card.tsx
src/components/layout/: header.tsx
src/components/providers/: explorer-provider.tsx
src/components/search/: global-search.tsx
src/components/ui/: relative-time.tsx  skeleton.tsx
src/lib/: utils.ts
src/lib/api/: backend-client.ts
src/lib/substrate/: client.ts
src/store/: explorer-store.ts
