[workspace]
members = [
    "crates/db",
    "crates/indexer",
    "crates/api",
    "crates/verifier",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GLIN AI <dev@glin.ai>"]
license = "Apache-2.0"

[workspace.dependencies]
# GLIN SDK (path dependencies to ../glin-sdk-rust)
glin-client = { version = "0.2", path = "../../glin-sdk-rust/glin-client" }
glin-indexer = { version = "0.2", path = "../../glin-sdk-rust/glin-indexer" }
glin-contracts = { version = "0.2", path = "../../glin-sdk-rust/glin-contracts" }
glin-types = { version = "0.2", path = "../../glin-sdk-rust/glin-types" }

# Subxt (from SDK)
subxt = "0.44"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "json", "migrate"] }

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"

# Environment
dotenvy = "0.15"
