[package]
name = "glinscan-indexer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "indexer"
path = "src/main.rs"

[dependencies]
# Local dependencies
glinscan-db = { path = "../db" }

# GLIN SDK
glin-client.workspace = true
glin-indexer.workspace = true
glin-types.workspace = true

# Subxt (for types)
subxt.workspace = true

# Database
sqlx.workspace = true

# Async
tokio.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
hex.workspace = true
